Closed Bug 1638092 Opened 5 years ago Closed 5 years ago

Browsingcontext shouldn't be required to call external protocol service's loadURI (unbreak email link, download integration fallbacks, thunderbird)

Categories

(Firefox :: File Handling, defect)

78 Branch
defect

Tracking

()

VERIFIED FIXED
Firefox 78
Tracking Status
firefox-esr68 --- unaffected
firefox76 --- unaffected
firefox77 --- unaffected
firefox78 + verified

People

(Reporter: jmacione, Assigned: Gijs)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

Click File and then click email link.

Actual results:

Email link doesn't open email, as it has done normally.

Expected results:

Email link click should open email with link attached.

Status: UNCONFIRMED → NEW
Has Regression Range: --- → yes
Has STR: --- → yes
Component: Untriaged → File Handling
Ever confirmed: true
Keywords: regression
Regressed by: 1196151

Error in Browser consolle:
Uncaught
Exception { name: "NS_ERROR_XPC_NOT_ENOUGH_ARGS", message: "Not enough arguments [nsIExternalProtocolService.loadURI]", result: 2153185281, filename: "chrome://browser/content/browser.js", lineNumber: 7974, columnNumber: 0, data: null, stack: "_launchExternalUrl@chrome://browser/content/browser.js:7974:22\nsendMessage@chrome://browser/content/browser.js:7963:10\nsendLinkForBrowser@chrome://browser/content/browser.js:7946:10\noncommand@chrome://browser/content/browser.xhtml:1:17\n", location: XPCWrappedNative_NoHelper }
browser.js:7974

Lovely, lots of stuff actually broke without any automated test coverage. :-\

Assignee: nobody → gijskruitbosch+bugs
Status: NEW → ASSIGNED
Summary: Email Link drop down under file does not work → Browsingcontext shouldn't be required to call external protocol service's loadURI (unbreak email link, download integration fallbacks, thunderbird)
Blocks: 1637826
Flags: qe-verify+
Flags: in-testsuite?

slightly different error on MacOS (assuming this is the same issue; appeared in Daily 0514):

Uncaught
Exception { name: "NS_ERROR_ILLEGAL_VALUE", message: "Component returned failure code: 0x80070057 (NS_ERROR_ILLEGAL_VALUE) [nsIExternalProtocolService.loadURI]", result: 2147942487, filename: "chrome://communicator/content/contentAreaClick.js", lineNumber: 230, columnNumber: 0, data: null, stack: "openLinkExternally@chrome://communicator/content/contentAreaClick.js:230:6\ncontentAreaClick@chrome://communicator/content/contentAreaClick.js:200:21\nonclick@chrome://messenger/content/messenger.xhtml:1:8\n", location: XPCWrappedNative_NoHelper }
contentAreaClick.js:230
openLinkExternally chrome://communicator/content/contentAreaClick.js:230
contentAreaClick chrome://communicator/content/contentAreaClick.js:200
onclick chrome://messenger/content/messenger.xhtml:1

Pushed by gijskruitbosch@gmail.com: https://hg.mozilla.org/integration/autoland/rev/2f84996f6ae6 do not require a browsingcontext to call the external protocol service's loadURI method, r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 78
Depends on: 1638803
Blocks: 1638804
Blocks: 1638803
No longer depends on: 1638803

External links working in 2020-05-18 Thanks.

Marking verified per comment 10. Thanks!

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: