Bug 1638092 - do not require a browsingcontext to call the external protocol service's loadURI method, r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D75543